k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-lab
  namespace: devops-lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-lab
  template:
    metadata:
      labels:
        app: node-lab
    spec:
      containers:
      - name: node-k8s-devops-lab
        image: nilvioc/node-k8s-devops-lab:latest
        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"

         livenessProbe:
           httpGet:
             path: /health
             port: 3000
           initialDelaySeconds: 20
           timeoutSeconds: 5
           periodSeconds: 10
           failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 3
