k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-lab
  namespace: devops-lab
spec:
  selector:
    app: node-lab
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
