k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-lab-ingress
  namespace: devops-lab

spec:
  ingressClassName: nginx

  rules:
  - host: node-lab.local
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: node-lab-helm
            port:
              number: 3000
